Added myrpal class